# motionSegmentation

./: BsplineFourier.py  LICENSE  README.md  __init__.py  bfSolver.py  pyproject.toml  setup.py
motionSegmentation/: BsplineFourier.py  __init__.py  bfSolver.py  motionCorrect.py  segment.py
